updated checkbox logic to persist user selection, added footer with links to github, linkedin

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   -->
 
 <!doctype html>
-<html lang="en">
+<html lang="h-100">
 
 <head>
   <meta charset="utf-8">
@@ -32,5 +32,9 @@
 <body>
   <app-root></app-root>
 </body>
-
+<div class="footer mt-auto format-footer-text">
+  Made with <i class="lni lni-heart-filled"></i> by Omar Hoblos 
+  <a href="https://github.com/omarhoblos" target="_blank" rel="noopener noreferrer" alt="GitHub Profile Omar Hoblos"><i class="icon-adjust lni lni-github-original"></i></a>
+  <a href="https://www.linkedin.com/in/omar-hoblos-5a7aa653/" target="_blank" rel="noopener noreferrer" alt="Linkedin Profile Omar Hoblos"><i class="icon-adjust lni lni-linkedin-original"></i></a>
+</div>
 </html>
